--- a/Client/src/main/resources/overview.fxml
+++ b/Client/src/main/resources/overview.fxml
@@ -38,10 +38,14 @@
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Slider?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
@@ -70,14 +74,14 @@
                             <children>
                                 <AnchorPane layoutX="12.0" layoutY="125.0" prefHeight="333.0" prefWidth="188.0" style="-fx-border-color: black;">
                                     <children>
-                                        <TextField fx:id="text_title" layoutX="10.666666984558105" layoutY="49.0" />
+                                        <TextField fx:id="text_title" layoutX="10.0" layoutY="49.0" />
                                         <TextField fx:id="text_author" layoutX="10.0" layoutY="102.0" />
-                                        <TextField fx:id="text_publisher" layoutX="10.666666984558105" layoutY="160.0" />
+                                        <TextField fx:id="text_publisher" layoutX="10.0" layoutY="160.0" />
                                         <Label layoutX="15.0" layoutY="142.0" text="Verlag" />
                                         <Label layoutX="11.666666984558105" layoutY="200.0" text="Bewertung (0 = deactivated)" />
-                                        <Slider fx:id="slider_rating" blockIncrement="1.0" layoutX="10.666666984558105" layoutY="225.0" majorTickUnit="1.0" max="5.0" minorTickCount="0" showTickLabels="true" showTickMarks="true" snapToTicks="true" />
-                                        <TextField fx:id="text_subareas" layoutX="10.666666984558105" layoutY="292.0" />
-                                        <Label layoutX="11.666666984558105" layoutY="274.0" text="Teilgebiete" />
+                                        <Slider fx:id="slider_rating" blockIncrement="1.0" layoutX="10.0" layoutY="225.0" majorTickUnit="1.0" max="5.0" minorTickCount="0" showTickLabels="true" showTickMarks="true" snapToTicks="true" />
+                                        <TextField fx:id="text_subareas" layoutX="10.0" layoutY="292.0" />
+                                        <Label layoutX="11.6" layoutY="274.0" text="Teilgebiete" />
                                         <Label alignment="CENTER" layoutX="67.0" prefHeight="27.0" prefWidth="53.0" text="Filter" textAlignment="CENTER">
                                             <font>
                                                 <Font name="System Bold" size="18.0" />
@@ -132,6 +136,21 @@
                         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="351.0" prefWidth="397.0">
                             <children>
                                 <Label fx:id="text_result" alignment="TOP_LEFT" contentDisplay="TOP" graphicTextGap="10.0" layoutX="1.0" layoutY="-1.0" mouseTransparent="true" nodeOrientation="LEFT_TO_RIGHT" prefHeight="549.0" prefWidth="678.0" scaleShape="false" textOverrun="WORD_ELLIPSIS" wrapText="true" />
+                        <ScrollPane fx:id="pane_resultTable" hbarPolicy="ALWAYS" layoutY="-2.0" pannable="true" prefHeight="551.0" prefWidth="660.0" vbarPolicy="ALWAYS">
+                           <content>
+                              <GridPane fx:id="grid_resultTable" prefHeight="549.0" prefWidth="643.0">
+                                <columnConstraints>
+                                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                </columnConstraints>
+                                <rowConstraints>
+                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                </rowConstraints>
+                              </GridPane>
+                           </content>
+                        </ScrollPane>
                             </children>
                         </AnchorPane>
                     </items>
