--- a/Client/src/main/resources/overview.fxml
+++ b/Client/src/main/resources/overview.fxml
@@ -32,23 +32,9 @@
   OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 -->
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.CheckBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Menu?>
-<?import javafx.scene.control.MenuBar?>
-<?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.Slider?>
-<?import javafx.scene.control.SplitPane?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
-
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <VBox prefHeight="577.0" prefWidth="880.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="de.prog3.client.controller.OverViewController">
     <children>
         <MenuBar prefHeight="0.0" prefWidth="0.0" VBox.vgrow="NEVER">
@@ -67,95 +53,86 @@
             </Menu>
         </MenuBar>
         <AnchorPane prefHeight="549.0" prefWidth="889.0" VBox.vgrow="ALWAYS">
-            <children>
-                <SplitPane dividerPositions="0.24430091185410338" prefHeight="551.0" prefWidth="880.0">
-                    <items>
-                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="549.0" prefWidth="293.0">
-                            <children>
-                                <AnchorPane layoutX="12.0" layoutY="125.0" prefHeight="333.0" prefWidth="188.0" style="-fx-border-color: black;">
-                                    <children>
-                                        <TextField fx:id="text_title" layoutX="10.0" layoutY="49.0" />
-                                        <TextField fx:id="text_author" layoutX="10.0" layoutY="102.0" />
-                                        <TextField fx:id="text_publisher" layoutX="10.0" layoutY="160.0" />
-                                        <Label layoutX="15.0" layoutY="142.0" text="Verlag" />
-                                        <Label layoutX="11.666666984558105" layoutY="200.0" text="Bewertung (0 = deactivated)" />
-                                        <Slider fx:id="slider_rating" blockIncrement="1.0" layoutX="10.0" layoutY="225.0" majorTickUnit="1.0" max="5.0" minorTickCount="0" showTickLabels="true" showTickMarks="true" snapToTicks="true" />
-                                        <TextField fx:id="text_subareas" layoutX="10.0" layoutY="292.0" />
-                                        <Label layoutX="11.6" layoutY="274.0" text="Teilgebiete" />
-                                        <Label alignment="CENTER" layoutX="67.0" prefHeight="27.0" prefWidth="53.0" text="Filter" textAlignment="CENTER">
-                                            <font>
-                                                <Font name="System Bold" size="18.0" />
-                                            </font>
-                                        </Label>
-                                        <Label layoutX="11.0" layoutY="84.0" prefHeight="17.0" prefWidth="59.0" text="Autor/-en" />
-                                        <Label layoutX="15.0" layoutY="31.0" text="Titel" />
-                                    </children>
-                                </AnchorPane>
-                                <AnchorPane layoutX="12.0" layoutY="14.0" prefHeight="111.0" prefWidth="188.0" style="-fx-border-color: black;">
-                                    <children>
-                                        <CheckBox id="check_title" fx:id="check_title" layoutX="11.0" layoutY="38.0" mnemonicParsing="false" text="Titel">
-                                            <font>
-                                                <Font size="9.0" />
-                                            </font>
-                                        </CheckBox>
-                                        <CheckBox fx:id="check_author" layoutX="58.0" layoutY="38.0" mnemonicParsing="false" text="Autor/-en">
-                                            <font>
-                                                <Font size="9.0" />
-                                            </font>
-                                        </CheckBox>
-                                        <CheckBox fx:id="check_publisher" layoutX="11.0" layoutY="62.0" mnemonicParsing="false" text="Verlag">
-                                            <font>
-                                                <Font size="9.0" />
-                                            </font>
-                                        </CheckBox>
-                                        <CheckBox fx:id="check_rating" layoutX="58.0" layoutY="62.0" mnemonicParsing="false" text="Bewertung">
-                                            <font>
-                                                <Font size="9.0" />
-                                            </font>
-                                        </CheckBox>
-                                        <CheckBox fx:id="check_subareas" layoutX="123.0" layoutY="62.0" mnemonicParsing="false" text="Teilgebiete">
-                                            <font>
-                                                <Font size="9.0" />
-                                            </font>
-                                        </CheckBox>
-                                        <Label alignment="CENTER" layoutX="6.0" prefHeight="27.0" prefWidth="171.0" text="sichtbare Spalten" textAlignment="CENTER">
-                                            <font>
-                                                <Font name="System Bold" size="18.0" />
-                                            </font>
-                                        </Label>
-                                    </children>
-                                </AnchorPane>
-                                <Button fx:id="button_submit" layoutX="79.0" layoutY="471.0" mnemonicParsing="false" onAction="#submit" text="Submit" />
-                                <Label fx:id="label_error" alignment="CENTER" contentDisplay="CENTER" layoutX="12.0" layoutY="496.0" prefHeight="46.0" prefWidth="188.0" textAlignment="CENTER" wrapText="true">
-                                    <font>
-                                        <Font size="10.0" />
-                                    </font>
-                                </Label>
-                            </children>
-                        </AnchorPane>
-                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="351.0" prefWidth="397.0">
-                            <children>
-                                <Label fx:id="text_result" alignment="TOP_LEFT" contentDisplay="TOP" graphicTextGap="10.0" layoutX="1.0" layoutY="-1.0" mouseTransparent="true" nodeOrientation="LEFT_TO_RIGHT" prefHeight="549.0" prefWidth="678.0" scaleShape="false" textOverrun="WORD_ELLIPSIS" wrapText="true" />
-                        <ScrollPane fx:id="pane_resultTable" hbarPolicy="ALWAYS" layoutY="-2.0" pannable="true" prefHeight="551.0" prefWidth="660.0" vbarPolicy="ALWAYS">
-                           <content>
-                              <GridPane fx:id="grid_resultTable" prefHeight="549.0" prefWidth="643.0">
-                                <columnConstraints>
-                                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                                </columnConstraints>
-                                <rowConstraints>
-                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                </rowConstraints>
-                              </GridPane>
-                           </content>
-                        </ScrollPane>
-                            </children>
-                        </AnchorPane>
-                    </items>
-                </SplitPane>
-            </children>
+            <SplitPane dividerPositions="0.24430091185410338" prefHeight="551.0" prefWidth="880.0">
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="549.0" prefWidth="293.0">
+                    <AnchorPane layoutX="12.0" layoutY="14.0" prefHeight="111.0" prefWidth="188.0"
+                                style="-fx-border-color: black;">
+                        <CheckBox id="check_title" fx:id="check_title" layoutX="11.0" layoutY="38.0"
+                                  mnemonicParsing="false" text="Titel">
+                            <font>
+                                <Font size="9.0"/>
+                            </font>
+                        </CheckBox>
+                        <CheckBox fx:id="check_author" layoutX="58.0" layoutY="38.0" mnemonicParsing="false"
+                                  text="Autor/-en">
+                            <font>
+                                <Font size="9.0"/>
+                            </font>
+                        </CheckBox>
+                        <CheckBox fx:id="check_publisher" layoutX="11.0" layoutY="62.0" mnemonicParsing="false"
+                                  text="Verlag">
+                            <font>
+                                <Font size="9.0"/>
+                            </font>
+                        </CheckBox>
+                        <CheckBox fx:id="check_rating" layoutX="58.0" layoutY="62.0" mnemonicParsing="false"
+                                  text="Bewertung">
+                            <font>
+                                <Font size="9.0"/>
+                            </font>
+                        </CheckBox>
+                        <CheckBox fx:id="check_subareas" layoutX="123.0" layoutY="62.0" mnemonicParsing="false"
+                                  text="Teilgebiete">
+                            <font>
+                                <Font size="9.0"/>
+                            </font>
+                        </CheckBox>
+                        <Label alignment="CENTER" layoutX="6.0" prefHeight="27.0" prefWidth="171.0"
+                               text="sichtbare Spalten" textAlignment="CENTER">
+                            <font>
+                                <Font name="System Bold" size="18.0"/>
+                            </font>
+                        </Label>
+                    </AnchorPane>
+                    <AnchorPane layoutX="12.0" layoutY="125.0" prefHeight="333.0" prefWidth="188.0"
+                                style="-fx-border-color: black;">
+                        <TextField fx:id="text_title" layoutX="10.0" layoutY="49.0"/>
+                        <TextField fx:id="text_author" layoutX="10.0" layoutY="102.0"/>
+                        <TextField fx:id="text_publisher" layoutX="10.0" layoutY="160.0"/>
+                        <Label layoutX="15.0" layoutY="142.0" text="Verlag"/>
+                        <Label layoutX="11.666666984558105" layoutY="200.0" text="Bewertung (0 = deactivated)"/>
+                        <Slider fx:id="slider_rating" blockIncrement="1.0" layoutX="10.0" layoutY="225.0"
+                                majorTickUnit="1.0" max="5.0" minorTickCount="0" showTickLabels="true"
+                                showTickMarks="true" snapToTicks="true"/>
+                        <TextField fx:id="text_subareas" layoutX="10.0" layoutY="292.0"/>
+                        <Label layoutX="11.6" layoutY="274.0" text="Teilgebiete"/>
+                        <Label alignment="CENTER" layoutX="67.0" prefHeight="27.0" prefWidth="53.0" text="Filter"
+                               textAlignment="CENTER">
+                            <font>
+                                <Font name="System Bold" size="18.0"/>
+                            </font>
+                        </Label>
+                        <Label layoutX="11.0" layoutY="84.0" prefHeight="17.0" prefWidth="59.0" text="Autor/-en"/>
+                        <Label layoutX="15.0" layoutY="31.0" text="Titel"/>
+                    </AnchorPane>
+
+                    <Button fx:id="button_submit" layoutX="79.0" layoutY="471.0" mnemonicParsing="false"
+                            onAction="#submit" text="Submit"/>
+                    <Label fx:id="label_error" alignment="CENTER" contentDisplay="CENTER" layoutX="12.0" layoutY="496.0"
+                           prefHeight="46.0" prefWidth="188.0" textAlignment="CENTER" wrapText="true">
+                        <font>
+                            <Font size="10.0"/>
+                        </font>
+                    </Label>
+                </AnchorPane>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="351.0" prefWidth="397.0">
+                    <TableView fx:id="table_result" prefHeight="537.0" prefWidth="646.0">
+                        <columnResizePolicy>
+                            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
+                        </columnResizePolicy>
+                    </TableView>
+                </AnchorPane>
+            </SplitPane>
         </AnchorPane>
     </children>
 </VBox>
