--- a/Client/src/main/resources/overview.fxml
+++ b/Client/src/main/resources/overview.fxml
@@ -40,16 +40,18 @@
         <MenuBar prefHeight="0.0" prefWidth="0.0" VBox.vgrow="NEVER">
             <Menu mnemonicParsing="false" text="Sortieren nach">
                 <items>
-                    <MenuItem id="menu_sortby_title" mnemonicParsing="false" onAction="#setSortyBy" text="Titel" />
-                    <MenuItem id="menu_sortby_author" mnemonicParsing="false" onAction="#setSortyBy" text="Autor" />
-                    <MenuItem id="menu_sortby_publisher" mnemonicParsing="false" onAction="#setSortyBy" text="Verlag" />
-                    <MenuItem id="menu_sortby_rating" mnemonicParsing="false" onAction="#setSortyBy" text="Bewertung (absteigend)" />
-                    <MenuItem id="menu_sortby_subareas" mnemonicParsing="false" onAction="#setSortyBy" text="Teilgebiete" />
+                    <MenuItem id="menu_sortby_title" mnemonicParsing="false" onAction="#setSortyBy" text="Titel"/>
+                    <MenuItem id="menu_sortby_author" mnemonicParsing="false" onAction="#setSortyBy" text="Autor"/>
+                    <MenuItem id="menu_sortby_publisher" mnemonicParsing="false" onAction="#setSortyBy" text="Verlag"/>
+                    <MenuItem id="menu_sortby_rating" mnemonicParsing="false" onAction="#setSortyBy"
+                              text="Bewertung (absteigend)"/>
+                    <MenuItem id="menu_sortby_subareas" mnemonicParsing="false" onAction="#setSortyBy"
+                              text="Teilgebiete"/>
                 </items>
             </Menu>
-            <Menu fx:id="menu_menu" mnemonicParsing="false" onShowing="#setAdminPageButton" text="Menu">
-                <MenuItem id="advAccess" fx:id="menu_logoff" mnemonicParsing="false" onAction="#logOff" text="Abmelden" />
-                <MenuItem id="advAccess" fx:id="menu_adminPage" mnemonicParsing="false" onAction="#AdminPage" text="Configure Database" visible="false" />
+            <Menu fx:id="menu_menu" mnemonicParsing="false" text="Menu">
+                <MenuItem id="advAccess" fx:id="menu_logoff" mnemonicParsing="false" onAction="#logOff"
+                          text="Abmelden"/>
             </Menu>
         </MenuBar>
         <AnchorPane prefHeight="549.0" prefWidth="889.0" VBox.vgrow="ALWAYS">
@@ -116,21 +118,31 @@
                         <Label layoutX="15.0" layoutY="31.0" text="Titel"/>
                     </AnchorPane>
 
-                    <Button fx:id="button_submit" layoutX="79.0" layoutY="471.0" mnemonicParsing="false"
-                            onAction="#submit" text="Submit"/>
-                    <Label fx:id="label_error" alignment="CENTER" contentDisplay="CENTER" layoutX="12.0" layoutY="496.0"
-                           prefHeight="46.0" prefWidth="188.0" textAlignment="CENTER" wrapText="true">
+                    <Button fx:id="button_submit" layoutX="68.0" layoutY="477.0" mnemonicParsing="false"
+                            onAction="#submit" prefHeight="38.0" prefWidth="75.0" text="Submit"/>
+                    <Label fx:id="label_error" alignment="CENTER" contentDisplay="CENTER" layoutX="12.0" layoutY="515.0"
+                           prefHeight="27.0" prefWidth="188.0" textAlignment="CENTER" wrapText="true">
                         <font>
                             <Font size="10.0"/>
                         </font>
                     </Label>
                 </AnchorPane>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="351.0" prefWidth="397.0">
-                    <TableView fx:id="table_result" prefHeight="537.0" prefWidth="646.0">
+                    <TableView fx:id="table_result" onMouseClicked="#tableClicked" prefHeight="513.0" prefWidth="646.0">
                         <columnResizePolicy>
                             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
                         </columnResizePolicy>
                     </TableView>
+                    <ButtonBar layoutX="-1.0" layoutY="512.0" prefHeight="38.0" prefWidth="646.0">
+                        <buttons>
+                            <Button fx:id="admin_add" disable="true" mnemonicParsing="false" onAction="#addBook"
+                                    text="Neu" textAlignment="CENTER"/>
+                            <Button fx:id="admin_edit" disable="true" mnemonicParsing="false" onAction="#editBook"
+                                    text="Bearbeiten" textAlignment="CENTER"/>
+                            <Button fx:id="admin_delete" disable="true" mnemonicParsing="false" onAction="#deleteBook"
+                                    text="Löschen"/>
+                        </buttons>
+                    </ButtonBar>
                 </AnchorPane>
             </SplitPane>
         </AnchorPane>
