--- a/Client/src/main/resources/overview.fxml
+++ b/Client/src/main/resources/overview.fxml
@@ -35,116 +35,113 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
-<VBox prefHeight="577.0" prefWidth="880.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="de.prog3.client.controller.OverViewController">
-    <children>
-        <MenuBar prefHeight="0.0" prefWidth="0.0" VBox.vgrow="NEVER">
-            <Menu mnemonicParsing="false" text="Sortieren nach">
-                <items>
-                    <MenuItem id="menu_sortby_title" mnemonicParsing="false" onAction="#setSortyBy" text="Titel"/>
-                    <MenuItem id="menu_sortby_author" mnemonicParsing="false" onAction="#setSortyBy" text="Autor"/>
-                    <MenuItem id="menu_sortby_publisher" mnemonicParsing="false" onAction="#setSortyBy" text="Verlag"/>
-                    <MenuItem id="menu_sortby_rating" mnemonicParsing="false" onAction="#setSortyBy"
-                              text="Bewertung (absteigend)"/>
-                    <MenuItem id="menu_sortby_subareas" mnemonicParsing="false" onAction="#setSortyBy"
-                              text="Teilgebiete"/>
-                </items>
-            </Menu>
-            <Menu fx:id="menu_menu" mnemonicParsing="false" text="Menu">
-                <MenuItem id="menu" mnemonicParsing="false" onAction="#logOff"
-                          text="Abmelden"/>
-            </Menu>
-        </MenuBar>
-        <AnchorPane prefHeight="549.0" prefWidth="889.0" VBox.vgrow="ALWAYS">
-            <SplitPane dividerPositions="0.24430091185410338" prefHeight="551.0" prefWidth="880.0">
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="549.0" prefWidth="293.0">
-                    <AnchorPane layoutX="12.0" layoutY="14.0" prefHeight="111.0" prefWidth="188.0"
-                                style="-fx-border-color: black;">
-                        <CheckBox id="check_title" fx:id="check_title" layoutX="11.0" layoutY="38.0"
-                                  mnemonicParsing="false" text="Titel">
-                            <font>
-                                <Font size="9.0"/>
-                            </font>
-                        </CheckBox>
-                        <CheckBox fx:id="check_author" layoutX="58.0" layoutY="38.0" mnemonicParsing="false"
-                                  text="Autor/-en">
-                            <font>
-                                <Font size="9.0"/>
-                            </font>
-                        </CheckBox>
-                        <CheckBox fx:id="check_publisher" layoutX="11.0" layoutY="62.0" mnemonicParsing="false"
-                                  text="Verlag">
-                            <font>
-                                <Font size="9.0"/>
-                            </font>
-                        </CheckBox>
-                        <CheckBox fx:id="check_rating" layoutX="58.0" layoutY="62.0" mnemonicParsing="false"
-                                  text="Bewertung">
-                            <font>
-                                <Font size="9.0"/>
-                            </font>
-                        </CheckBox>
-                        <CheckBox fx:id="check_subareas" layoutX="123.0" layoutY="62.0" mnemonicParsing="false"
-                                  text="Teilgebiete">
-                            <font>
-                                <Font size="9.0"/>
-                            </font>
-                        </CheckBox>
-                        <Label alignment="CENTER" layoutX="6.0" prefHeight="27.0" prefWidth="171.0"
-                               text="Sichtbare Spalten" textAlignment="CENTER">
-                            <font>
-                                <Font name="System Bold" size="18.0"/>
-                            </font>
-                        </Label>
-                    </AnchorPane>
-                    <AnchorPane layoutX="12.0" layoutY="125.0" prefHeight="333.0" prefWidth="188.0"
-                                style="-fx-border-color: black;">
-                        <TextField fx:id="text_title" layoutX="10.0" layoutY="49.0"/>
-                        <TextField fx:id="text_author" layoutX="10.0" layoutY="102.0"/>
-                        <TextField fx:id="text_publisher" layoutX="10.0" layoutY="160.0"/>
-                        <Label layoutX="15.0" layoutY="142.0" text="Verlag"/>
-                        <Label layoutX="11.666666984558105" layoutY="200.0" text="Bewertung (mindestens)"/>
-                        <Slider fx:id="slider_rating" blockIncrement="1.0" layoutX="10.0" layoutY="225.0"
-                                majorTickUnit="1.0" max="5.0" min="1.0" minorTickCount="0" showTickLabels="true"
-                                showTickMarks="true" snapToTicks="true" value="1.0"/>
-                        <TextField fx:id="text_subareas" layoutX="10.0" layoutY="292.0"/>
-                        <Label layoutX="11.6" layoutY="274.0" text="Teilgebiete"/>
-                        <Label alignment="CENTER" layoutX="67.0" prefHeight="27.0" prefWidth="53.0" text="Filter"
-                               textAlignment="CENTER">
-                            <font>
-                                <Font name="System Bold" size="18.0"/>
-                            </font>
-                        </Label>
-                        <Label layoutX="11.0" layoutY="84.0" prefHeight="17.0" prefWidth="59.0" text="Autor/-en"/>
-                        <Label layoutX="15.0" layoutY="31.0" text="Titel"/>
-                    </AnchorPane>
-
-                    <Button fx:id="button_submit" layoutX="68.0" layoutY="477.0" mnemonicParsing="false"
-                            onAction="#submit" prefHeight="38.0" prefWidth="75.0" text="Submit"/>
-                    <Label fx:id="label_error" alignment="CENTER" contentDisplay="CENTER" layoutX="12.0" layoutY="515.0"
-                           prefHeight="27.0" prefWidth="188.0" textAlignment="CENTER" wrapText="true">
+<VBox xmlns:fx="http://javafx.com/fxml/1" prefHeight="577.0" prefWidth="880.0" xmlns="http://javafx.com/javafx/18"
+      fx:controller="de.prog3.client.controller.OverViewController">
+    <MenuBar prefHeight="0.0" prefWidth="0.0" VBox.vgrow="NEVER">
+        <Menu mnemonicParsing="false" text="Sortieren nach">
+            <MenuItem id="menu_sortby_title" mnemonicParsing="false" onAction="#setSortyBy" text="Titel"/>
+            <MenuItem id="menu_sortby_author" mnemonicParsing="false" onAction="#setSortyBy" text="Autor"/>
+            <MenuItem id="menu_sortby_publisher" mnemonicParsing="false" onAction="#setSortyBy" text="Verlag"/>
+            <MenuItem id="menu_sortby_rating" mnemonicParsing="false" onAction="#setSortyBy"
+                      text="Bewertung (absteigend)"/>
+            <MenuItem id="menu_sortby_subareas" mnemonicParsing="false" onAction="#setSortyBy"
+                      text="Teilgebiete"/>
+        </Menu>
+        <Menu id="menu_menu" mnemonicParsing="false" text="Menu">
+            <MenuItem id="menu" mnemonicParsing="false" onAction="#logOff"
+                      text="Abmelden"/>
+        </Menu>
+    </MenuBar>
+    <AnchorPane prefHeight="549.0" prefWidth="889.0" VBox.vgrow="ALWAYS">
+        <SplitPane dividerPositions="0.24430091185410338" prefHeight="551.0" prefWidth="880.0">
+            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="549.0" prefWidth="293.0">
+                <AnchorPane layoutX="12.0" layoutY="14.0" prefHeight="111.0" prefWidth="188.0"
+                            style="-fx-border-color: black;">
+                    <CheckBox id="check_title" fx:id="check_title" layoutX="11.0" layoutY="38.0"
+                              mnemonicParsing="false" text="Titel">
                         <font>
-                            <Font size="10.0"/>
+                            <Font size="9.0"/>
+                        </font>
+                    </CheckBox>
+                    <CheckBox fx:id="check_author" layoutX="58.0" layoutY="38.0" mnemonicParsing="false"
+                              text="Autor/-en">
+                        <font>
+                            <Font size="9.0"/>
+                        </font>
+                    </CheckBox>
+                    <CheckBox fx:id="check_publisher" layoutX="11.0" layoutY="62.0" mnemonicParsing="false"
+                              text="Verlag">
+                        <font>
+                            <Font size="9.0"/>
+                        </font>
+                    </CheckBox>
+                    <CheckBox fx:id="check_rating" layoutX="58.0" layoutY="62.0" mnemonicParsing="false"
+                              text="Bewertung">
+                        <font>
+                            <Font size="9.0"/>
+                        </font>
+                    </CheckBox>
+                    <CheckBox fx:id="check_subareas" layoutX="123.0" layoutY="62.0" mnemonicParsing="false"
+                              text="Teilgebiete">
+                        <font>
+                            <Font size="9.0"/>
+                        </font>
+                    </CheckBox>
+                    <Label alignment="CENTER" layoutX="6.0" prefHeight="27.0" prefWidth="171.0"
+                           text="Sichtbare Spalten" textAlignment="CENTER">
+                        <font>
+                            <Font name="System Bold" size="18.0"/>
                         </font>
                     </Label>
                 </AnchorPane>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="351.0" prefWidth="397.0">
-                    <TableView fx:id="table_result" onMouseClicked="#tableClicked" prefHeight="513.0" prefWidth="646.0">
-                        <columnResizePolicy>
-                            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
-                        </columnResizePolicy>
-                    </TableView>
-                    <ButtonBar layoutX="-1.0" layoutY="512.0" prefHeight="38.0" prefWidth="646.0">
-                        <buttons>
-                            <Button fx:id="admin_add" disable="true" mnemonicParsing="false" onAction="#addBook"
-                                    text="Neu" textAlignment="CENTER"/>
-                            <Button fx:id="admin_edit" disable="true" mnemonicParsing="false" onAction="#editBook"
-                                    text="Bearbeiten" textAlignment="CENTER"/>
-                            <Button fx:id="admin_delete" disable="true" mnemonicParsing="false" onAction="#deleteBook"
-                                    text="Löschen"/>
-                        </buttons>
-                    </ButtonBar>
+                <AnchorPane layoutX="12.0" layoutY="125.0" prefHeight="333.0" prefWidth="188.0"
+                            style="-fx-border-color: black;">
+                    <TextField fx:id="text_title" layoutX="10.0" layoutY="49.0"/>
+                    <TextField fx:id="text_author" layoutX="10.0" layoutY="102.0"/>
+                    <TextField fx:id="text_publisher" layoutX="10.0" layoutY="160.0"/>
+                    <Label layoutX="15.0" layoutY="142.0" text="Verlag"/>
+                    <Label layoutX="11.666666984558105" layoutY="200.0" text="Bewertung (mindestens)"/>
+                    <Slider fx:id="slider_rating" blockIncrement="1.0" layoutX="10.0" layoutY="225.0"
+                            majorTickUnit="1.0" max="5.0" min="1.0" minorTickCount="0" showTickLabels="true"
+                            showTickMarks="true" snapToTicks="true" value="1.0"/>
+                    <TextField fx:id="text_subareas" layoutX="10.0" layoutY="292.0"/>
+                    <Label layoutX="11.6" layoutY="274.0" text="Teilgebiete"/>
+                    <Label alignment="CENTER" layoutX="67.0" prefHeight="27.0" prefWidth="53.0" text="Filter"
+                           textAlignment="CENTER">
+                        <font>
+                            <Font name="System Bold" size="18.0"/>
+                        </font>
+                    </Label>
+                    <Label layoutX="11.0" layoutY="84.0" prefHeight="17.0" prefWidth="59.0" text="Autor/-en"/>
+                    <Label layoutX="15.0" layoutY="31.0" text="Titel"/>
                 </AnchorPane>
-            </SplitPane>
-        </AnchorPane>
-    </children>
+
+                <Button fx:id="button_submit" layoutX="68.0" layoutY="477.0" mnemonicParsing="false"
+                        onAction="#submit" prefHeight="38.0" prefWidth="75.0" text="Submit"/>
+                <Label fx:id="label_error" alignment="CENTER" contentDisplay="CENTER" layoutX="12.0" layoutY="515.0"
+                       prefHeight="27.0" prefWidth="188.0" textAlignment="CENTER" wrapText="true">
+                    <font>
+                        <Font size="10.0"/>
+                    </font>
+                </Label>
+            </AnchorPane>
+            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="351.0" prefWidth="397.0">
+                <TableView fx:id="table_result" onMouseClicked="#tableClicked" prefHeight="513.0" prefWidth="646.0">
+                    <columnResizePolicy>
+                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
+                    </columnResizePolicy>
+                </TableView>
+                <ButtonBar layoutX="-1.0" layoutY="512.0" prefHeight="38.0" prefWidth="646.0">
+                    <buttons>
+                        <Button fx:id="admin_add" disable="true" mnemonicParsing="false" onAction="#addBook"
+                                text="Neu" textAlignment="CENTER"/>
+                        <Button fx:id="admin_edit" disable="true" mnemonicParsing="false" onAction="#editBook"
+                                text="Bearbeiten" textAlignment="CENTER"/>
+                        <Button fx:id="admin_delete" disable="true" mnemonicParsing="false" onAction="#deleteBook"
+                                text="Löschen"/>
+                    </buttons>
+                </ButtonBar>
+            </AnchorPane>
+        </SplitPane>
+    </AnchorPane>
 </VBox>
