--- a/Client/src/main/resources/overview.fxml
+++ b/Client/src/main/resources/overview.fxml
@@ -36,7 +36,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 <VBox xmlns:fx="http://javafx.com/fxml/1" prefHeight="577.0" prefWidth="880.0" xmlns="http://javafx.com/javafx/18"
-      fx:controller="de.prog3.client.controller.OverViewController">
+      fx:controller="de.prog.client.controller.OverViewController">
     <MenuBar prefHeight="0.0" prefWidth="0.0" VBox.vgrow="NEVER">
         <Menu mnemonicParsing="false" text="Sortieren nach">
             <MenuItem id="menu_sortby_title" mnemonicParsing="false" onAction="#setSortyBy" text="Titel"/>
